ui/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-ui-service
  namespace: platform-ui
  labels:
    app: platform-ui-dashboard
    app.kubernetes.io/name: platform-ui-dashboard
    app.kubernetes.io/part-of: base-platform
    app.kubernetes.io/component: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
    nodePort: 30800
  selector:
    app: platform-ui-dashboard
